--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,8 +1,17 @@
+body, h1, h2, h3, h4, h5 {
+  padding: 0;
+  margin: 0;
+}
+
+.active {
+  display: block;
+}
+
 .wrapper {
   margin-left: auto;
   margin-right: auto;
   max-width: 1280px;
-  padding: 10px 0;
+  padding: 20px 0;
   width: 100%;
 }
 
@@ -28,6 +37,10 @@
 }
 
 .header__catalog-button {
+  position: relative;
+}
+
+.catalog-button {
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -38,7 +51,11 @@
   border-radius: 3px;
   margin-right: 38px;
   width: 118px;
-  height: 100%;
+  height: 40px;
+}
+
+.catalog-button:hover {
+  background-color: #0452e2;
 }
 
 .catalog-button__burger {
@@ -56,6 +73,39 @@
   font-weight: 700;
 }
 
+.header__catalog {
+  display: none;
+  position: absolute;
+  border: 2px solid #005bff;
+  border-radius: 3px;
+  width: 200px;
+  background-color: white;
+  cursor: pointer;
+  top: 45px;
+}
+
+.catalog__list {
+  text-align: center;
+  list-style: none;
+  white-space: nowrap;
+  padding: 10px;
+  margin: 0;
+}
+
+.catalog__list li {
+  padding: 5px;
+  border-bottom: 1px solid black;
+}
+
+.catalog__list li:hover {
+  background-color:#343a40;
+  color: white;
+}
+
+.catalog__list li:last-child {
+  border-bottom: none;
+}
+
 .header__search {
   display: flex;
   align-items: center;
@@ -66,15 +116,17 @@
 
 .search-wrapper {
   border: 2px solid #005bff;
+  border-radius: 3px 0px 0px 3px;
   box-sizing: border-box;
-  border-radius: 3px;
   height: 100%;
   width: 100%;
 }
 
 .search-wrapper__input {
   box-sizing: border-box;
-  outline: none;
+  outline:none;
+  border: none;
+  padding-left: 10px;
   width: 100%;
   height: 100%;
 }
@@ -93,6 +145,10 @@
   height: 100%;
 }
 
+.search-wrapper__button:hover {
+  background-color:#0452e2;
+}
+
 .button__search-img {
   background-image: url(../img/search.svg);
   background-size: contain;
@@ -107,13 +163,14 @@
   align-items: center;
   position: relative;
   margin: 0 15px;
+  cursor: pointer;
 }
 
 .cart__counter {
   position: absolute;
   background-color: #f91155;
   border-radius: 8px;
-  padding: 0 8px;
+  padding: 2px 10px;
   right: -5px;
   top: -5px;
   font-size: 11px;
@@ -131,3 +188,162 @@
 .cart__desc {
   font-size: 14px;
 }
+
+.main {
+  display: flex;
+}
+
+.main__group {
+  width: 250px;
+}
+
+.filter-title {
+  margin-bottom: 10px;
+}
+
+.filter-price {
+  margin-bottom: 10px;
+}
+
+.filter-price__title {
+  margin-bottom: 10px;
+}
+
+.filter-price__group-container {
+  display: flex;
+  grid-gap: 10px;
+}
+
+.input-group__label {
+  color: #707f8d;
+}
+
+.input-group__input {
+  padding: 4px 5px 6px;
+  border: 2px solid #b3bcc5;
+  border-radius: 6px;
+  outline:none;
+  width: 100%;
+}
+
+.filter-price__input-group {
+  display: flex;
+  box-sizing: border-box;
+  grid-gap: 5px;
+  align-items: center;
+}
+
+.input-group__input:hover {
+  border-color: #005bff;
+}
+
+.filter-checkbox__label {
+  cursor: pointer;
+}
+
+.filter-checkbox__real {
+  opacity: 0;
+  position: absolute;
+  cursor: pointer;
+}
+
+.filter-checkbox__custom {
+  display: inline-block;
+  border: 2px solid #b3bcc5;
+  border-radius: 3px;
+  vertical-align: sub;
+  width: 15px;
+  height: 15px;
+  cursor: pointer;
+}
+
+.filter-checkbox__custom::before {
+  content: "";
+  display: inline-block;
+  background-image: url(../img/chekmark.svg);
+  background-color: #005bff;
+  width: 15px;
+  height: 15px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  transform: translate(0,0) scale(0);
+}
+
+.filter-checkbox__real:checked + .filter-checkbox__custom::before{
+  transform: translate(0,0) scale(1);
+}
+
+.filter-checkbox__text {
+  display: inline-block;
+  font-size: 15px;
+  user-select: none;
+}
+
+.cart {
+  display: none;
+  position: fixed;
+  z-index: 999999;
+  top: 0;
+  left: 50%; 
+  transform: translateX(-50%);
+  background-color: white;
+  border-radius: 3px;
+}
+
+.cart-body {
+  position: relative;
+  width: 1024px;
+  padding: 25px;
+}
+
+.cart-group {
+  display: flex;
+  justify-content: space-between;
+}
+
+.cart-body__title {
+  font-size: 28px;
+  color: #707f8d;
+}
+
+.cart-body__total {
+  font-size: 18px;
+  margin-bottom: 25px;
+}
+
+.cart-body__total span {
+ color: #10c44c;
+}
+
+.cart-body__empty {
+  border: 1px solid #4d5f71;
+  border-radius: 3px;
+  padding: 25px;
+  margin-bottom: 25px;
+}
+
+.empty__text {
+  text-align: center;
+  font-size: 24px;
+  color: #4d5f71;
+}
+
+.cart-body__cross {
+  position: absolute;
+  top: 25px;
+  right: 25px;
+  cursor: pointer;
+}
+
+.cart-body__button {
+  display: block;
+  margin-left: auto;
+  padding: 10px 15px;
+  font-size: 14px;
+  cursor: pointer;
+  background-color:#005bff;
+  color: white;
+  border: none;
+  border-radius: 3px;
+}
+
