--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -48,7 +48,7 @@ body, h1, h2, h3, h4, h5, p {
   padding: 0;
   border: none;
   background-color: #005bff;
-  border-radius: 3px;
+  border-radius: 8px;
   margin-right: 38px;
   width: 118px;
   height: 40px;
@@ -137,8 +137,8 @@ body, h1, h2, h3, h4, h5, p {
   align-items: center;
   justify-content: center;
   border: none;
-  border-top-right-radius: 3px;
-  border-bottom-right-radius: 3px;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
   background-color: #005bff;
   padding: 0;
   width: 76px;
@@ -191,6 +191,7 @@ body, h1, h2, h3, h4, h5, p {
 
 .main {
   display: flex;
+  gap: 50px;
 }
 
 .main__group {
@@ -280,7 +281,7 @@ body, h1, h2, h3, h4, h5, p {
 }
 
 .cart {
-  
+  display: none;
   position: fixed;
   z-index: 999999;
   top: 0;
@@ -294,6 +295,7 @@ body, h1, h2, h3, h4, h5, p {
   position: relative;
   width: 1024px;
   padding: 25px;
+  background-color: white;
 }
 
 .cart-group {
@@ -322,7 +324,7 @@ body, h1, h2, h3, h4, h5, p {
   margin-bottom: 25px;
 }
 
-.goods__empty-text {
+.cart-goods__empty-text {
   text-align: center;
   font-size: 24px;
   color: #4d5f71;
@@ -347,17 +349,19 @@ body, h1, h2, h3, h4, h5, p {
   border-radius: 3px;
 }
 
-.goods__wrapper {
+.cart-goods__wrapper {
   display: flex;
   justify-content: space-between;
+  padding: 16px 0;
+  border-bottom: 1px solid rgba(204,214,228,.6);
 }
 
-.goods__container-description {
+.cart-goods__container-description {
   display: flex;
   flex-grow: 1;
 }
 
-.goods__chekbox {
+.cart-goods__chekbox {
   display: flex;
   align-items: center;
 }
@@ -393,25 +397,25 @@ body, h1, h2, h3, h4, h5, p {
   background-position: center center;
 }
 
-.goods__image {
+.cart-goods__image {
   padding-left: 24px;
   padding-right: 8px;
 }
 
-.goods__image-contain {
+.cart-goods__image-contain {
   background-image: url(https://ir.ozone.ru/s3/multimedia-r/wc100/6633048519.jpg);
   width: 100px;
   height: 100px;
   cursor: pointer;
 }
 
-.goods__group-description {
+.cart-goods__group-description {
   max-width: 444px;
   padding-left: 24px;
   padding-right: 8px;
 }
 
-.goods__name {
+.cart-goods__name {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
@@ -420,12 +424,12 @@ body, h1, h2, h3, h4, h5, p {
   margin-bottom: 8px;
 }
 
-.goods__name-color {
+.cart-goods__name-color {
   color: #808d9a;
   margin-bottom: 16px;
 }
 
-.goods__mark-group {
+.cart-goods__mark-group {
   display: flex;
   gap: 8px;
 }
@@ -472,14 +476,14 @@ body, h1, h2, h3, h4, h5, p {
   background-color: rgba(0, 26, 52, 0.185);
 }
 
-.goods__price {
+.cart-goods__price {
   display: flex;
   flex-direction: column;
   align-items: start;
   gap: 8px;
 }
 
-.goods__price-normal {
+.cart-goods__price-normal {
   color: rgba(255, 255, 255, 1);
   background-color: rgba(16, 196, 76, 1);
   border-radius: 4px;
@@ -488,7 +492,7 @@ body, h1, h2, h3, h4, h5, p {
   padding: 0 4px;
 }
 
-.goods__price-sale {
+.cart-goods__price-sale {
   white-space: nowrap;
   color: #ffffff;
   background-color: rgb(116, 3, 3);
@@ -496,7 +500,7 @@ body, h1, h2, h3, h4, h5, p {
   border-radius: 4px;
 }
 
-.goods__count-wrapp {
+.cart-goods__count-wrapp {
   display: flex;
   align-items: flex-start;
   align-items: stretch;
@@ -554,4 +558,103 @@ body, h1, h2, h3, h4, h5, p {
 .count-wrapp__numeric::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+.main__goods {
+  display: flex;
+  justify-content: space-between;
+  flex: 1;
+  flex-wrap: wrap;
+  row-gap: 50px;
+  border-top: 1px solid rgba(204,214,228,.6);
+  padding-top: 10px;
+}
+
+.main-goods__wrapper {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 23%;
+
+}
+
+.main-goods__group-image {
+  display: flex;
+  cursor: pointer;
+  width: 227px;
+  height: 227px;
+  border: 1px solid #005bff;
+  border-radius: 8px;
+  margin-bottom: 10px;
+}
+
+.main-goods__image {
+  box-sizing: border-box;
+	max-width: 100%;
+	max-height: 100%;
+	margin: auto;
+  padding: 16px;
+}
+
+.main-goods__group-des-btn {
+  display: flex;
+  gap: 30px;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-grow: 1;
+}
+
+.main-goods__group-description {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.main-goods__price {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 10px;
+}
+
+.main-goods__price-normal {
+  color: #10c44c;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.main-goods__price-sale {
+  background-color: #C41E3A;
+  color: #ffffff;
+  border-radius: 8px;
+  padding: 3px;
+  white-space: nowrap;
+}
+
+.main-goods__name {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  word-break: break-all;
+  overflow: hidden;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+}
+
+.main-goods__button {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  border: none;
+  background-color: #005bff;
+  border-radius: 8px;
+  min-height: 40px;
+  min-width: 120px;
+  color: #ffffff;
+}
+
+.main-goods__button:hover {
+  background-color:#0452e2;
 }
