--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -280,6 +280,17 @@ body, h1, h2, h3, h4, h5, p {
   user-select: none;
 }
 
+.cart-background {
+  display: none;
+  position: fixed;
+  background-color: rgba(110, 110, 109, 0.5);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  
+}
+
 .cart {
   display: none;
   position: fixed;
